--- a/index.html
+++ b/index.html
@@ -43,32 +43,27 @@
 
                 <section data-markdown>
                     <script type="text/template">
-                        # Wepiao & Edge
+                        # <span style="color:#1ab11d">Wepiao</span> & *Edge*
                         ### 微信电影票 Edge 兼容实践
 
-                        <small>
-                            <a href="http://huangxuan.me/about">黄玄</a>
-                            <a href="http://weibo.com/huxpro">@Huxpro</a>
-                        </small><br>
-                        <small>
-                            <a href="http://huangxuan.me/about">盖玉龙</a>
-                            <a href="http://weibo.com/huxpro">@Huxpro</a>
+                        <small style="margin-top:17px;">
+                            <a href="#/1">黄玄</a> /
+                            <a href="#/2">盖玉龙</a>
                         </small>
                     </script>
                 </section>
 
-                <section data-markdown>
+                <section data-markdown style="text-align: left;">
                     <script type="text/template">
-                        <img src="attach/hux.jpg" style="
+                        <img src="attach/hux.jpg" class="logo" style="
                             width: 200px;
                             border-color: white;
-                            border-radius: 50%;
                         "/>
+
                         ## 黄玄
                         微信电影票前端工程师
 
-                        <small>前阿里巴巴前端工程师</small>
-
+                        <small>前阿里巴巴前端工程师</small><br>
                         <small>
                             <a href="http://huangxuan.me">Blog</a> /
                             <a href="http://weibo.com/huxpro">@Huxpro</a> /
@@ -77,6 +72,29 @@
                         </small>
                     </script>
                 </section>
+
+                <section data-markdown style="text-align: left;">
+                    <script type="text/template">
+                        <!-- 全部换成你的个人介绍和链接 -->
+                        <img src="attach/hux.jpg" class="logo" style="
+                            width: 200px;
+                            border-color: white;
+                        "/>
+
+                        ## 盖玉龙
+                        微信电影票前端工程师
+
+                        <small></small><br>
+                        <small>
+                            <a href="http://huangxuan.me">Blog</a> /
+                            <a href="http://weibo.com/huxpro">@Huxpro</a> /
+                            <a href="https://github.com/huxpro">GitHub</a> /
+                            <a href="http://www.zhihu.com/people/huxpro">知乎</a>
+                        </small>
+                    </script>
+                </section>
+
+
 
                 <section data-markdown>
                     <script type="text/template">
