--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
         <!--[if lt IE 9]>
         <script src="lib/js/html5shiv.js"></script>
         <![endif]-->
+        <style media="screen">
+            .wepiao{
+                color:#1ab11d;
+            }
+        </style>
     </head>
 
     <body>
@@ -43,7 +48,7 @@
 
                 <section data-markdown>
                     <script type="text/template">
-                        # <span style="color:#1ab11d">Wepiao</span> & *Edge*
+                        # <span class="wepiao" >Wepiao</span> & *Edge*
                         ### 微信电影票 Edge 兼容实践
 
                         <small style="margin-top:17px;">
@@ -76,6 +81,26 @@
 
 
 <!-- mobile Hux --->
+                <section data-markdown>
+                    <script type="text/template">
+                        # What is <span class="wepiao">Wepiao</span>?
+
+                        <h3> 微信电影票 </h3>
+                    </script>
+                </section>
+
+                <section data-markdown>
+                    <script type="text/template">
+                        ## Products
+
+                        | Desktop Web  | Mobile Web    | Native App   |
+                        | ------------ | ------------- | ------------ |
+                        | [wepiao.com](www.wepiao.com) | [wepiao.com](m.wepiao.com)  | 微票儿       |
+                        |  | 微信 Webview |  |
+                        | | QQ WebView  | |
+                    </script>
+                </section>
+
                 <section data-markdown>
                     <script type="text/template">
                         # Mobile Web
