rename subtitle & update example

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <section data-markdown>
                     <script type="text/template">
                         # <span class="wepiao" >Wepiao</span> & *Edge*
-                        ### 微信电影票 Edge 兼容实践
+                        ### 聊聊微票儿的浏览器兼容实践
 
                         <small style="margin-top:17px;">
                             <a href="#/1">黄玄</a> /
@@ -58,7 +58,7 @@
                     </script>
                 </section>
 
-<!-- mobile Hux --->
+<!-- mobile Hux -->
                 <section data-markdown style="text-align: left;">
                     <script type="text/template">
                         <img src="attach/hux.jpg" class="logo" style="
@@ -130,14 +130,11 @@
                         }
                         ```
                         <div class="fragment">
-                        - `:focus` & `outline`
+                        `:focus` & `outline`
 
-                        ```
                         button:focus {
                             outline: 0;
                         }
-
-                        ```
                     </script>
                 </section>
 
