--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                <section data-markdown style="text-align: left;">
                     <script type="text/template">
                         <!-- 全部换成你的个人介绍和链接 -->
-                        <img src="attach/edge/photo.jpg" class="logo" style="
+                        <img src="attach/gyl.jpg" class="logo" style="
                             width: 200px;
                             border-color: white;
                         "/>
