add Date & Location

--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
                         # <span class="wepiao" >Wepiao</span> & *Edge*
                         ### 聊聊微票儿的浏览器兼容实践
 
-                        <small style="margin-top:17px;">
+                        <small style="margin-top:27px;line-height:1.5em;">
                             <a href="#/1">黄玄</a> /
                             <a href="#/29">盖玉龙</a>
+                            <br>July 25, 2015 @Microsoft Edge Salon
                         </small>
                     </script>
                 </section>
