update date notation

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <small style="margin-top:27px;line-height:1.5em;">
                             <a href="#/1">黄玄</a> /
                             <a href="#/29">盖玉龙</a>
-                            <br>July 25, 2015 @Microsoft Edge Salon
+                            <br>Microsoft Edge Salon @July 25, 2015
                         </small>
                     </script>
                 </section>
